# devcontainer-templates

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
python/: .gitignore  README.md  pyproject.toml
python/.devcontainer/: Dockerfile  devcontainer.dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
python/.devcontainer/scripts/: post_create.sh  reset_devcontainer.sh
python/src/: example.ipynb  example.py  main.py
rust/: README.md
rust/src/: example.rs
typescript/: README.md  package.json
typescript/.devcontainer/: devcontainer.dockerfile  devcontainer.json  docker-compose.yml
typescript/.devcontainer/scripts/: post_create.sh  reset_devcontainer.sh
typescript/src/: exmaple.ts
