[tool.poetry]
name = "python-container"
version = "0.0.1"
description = "Example project with Poetry inside a devcontainer"
authors = ["Luis Pinheiro <luis.pinheiro95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = "^3.7.1"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.3"
mypy = "^1.0.1"
black = "^23.1.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
