[tool.poetry]
name = "python-devcontainer"
version = "0.0.1"
description = "Example project with Poetry inside a devcontainer"
authors = ["Daniel Burger <public@danielburger.online>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
black = "^23.3.0"
pylint = "^2.17.2"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
