[tool.poetry]
name = "python-example"
version = "0.0.1"
description = "Example project with Poetry inside a devcontainer"
authors = ["Konstantinos Samaras-Tsakiris <ksamtsak@gmail.com>"]
readme = "README.md"
licence = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.19"
pytest = "^7.2"
mypy = "^0.982"
pylint = "^2.15"
black = "^22.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
